# pymath

./: main.py  pyproject.toml  requirements.txt
PythonSolveMathProblem/: chapter2.py  chapter3.py  chapter4.py  chapter5.py  chapter6.py  chapter7.py
math_with_python/: test.ipynb
