[project]
name = "pymath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
environments = ["sys_platform == 'win32'"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
ignore-error-codes = [403]
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
ignore-error-codes = [403]
